--- a/readme
+++ b/readme
@@ -1,3 +1,2 @@
-#INTRODUCTION TO JAVASCRIPT
-
+JAVASCRIPT INTRODUCTION
 Here we use some basic JAVASCRIPT concepts to create an inconventional calculator !
